syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";

service MessageService {
  rpc SendMessage (MessageRequest) returns (MessageResponse);
}

message MessageRequest {
  string message = 1;
}

message MessageResponse {
  string message = 1;
}
